# openclaudia-ui

./: .gitignore  Cargo.toml  README.md
src/: main.rs
static/: api.js  app.js  chat.js  index.html  palette.js  style.css
