[package]
name = "openclaudia-ui"
version = "0.1.0"
edition = "2021"
description = "Web GUI launcher for OpenClaudia — auto-finds ports, starts the proxy, serves the UI"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.13", features = ["json"] }
tower-http = { version = "0.7", features = ["fs", "cors"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
